# x-growth-agent

./: .gitignore  LICENSE  README.md  README_EN.md  config.example.yaml  pyproject.toml
docs/: PRODUCT.md  architecture.mmd
examples/: replies.jsonl
skills/reply-craft/: SKILL.md
skills/watchlist/: SKILL.md
tests/: test_smoke.py
xgrowth/: __init__.py  cli.py  config.py  i18n.py  models.py  orchestrator.py  poller.py  prompts.py  store.py  twitter.py  util.py
xgrowth/engines/: __init__.py  base.py  claude.py  codex.py
xgrowth/notifiers/: __init__.py  bark.py  base.py  lark.py  telegram.py
xgrowth/panel/: __init__.py  app.py
